--- a/style.css
+++ b/style.css
@@ -47,14 +47,17 @@ li {
     margin: 0 auto;
     align-items: center;
 }
+
 .row {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
 }
+
 .purple {
     color: #6415ff;
 }
+
 .nav__logo {
     display: flex;
     align-items: center;
@@ -448,6 +451,16 @@ img {
     align-items: center;
 }
 
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .quality__description,
 .quality__img--wrapper {
     width: 50%;
@@ -490,7 +503,7 @@ img {
     margin-top: 32px;
 }
 
-.btn{
+.btn {
     background-color: #6415ff;
     padding: 12px 32px;
     border: none;
@@ -501,9 +514,11 @@ img {
     transition: all 300ms ease;
     cursor: pointer;
 }
-.btn:hover{
+
+.btn:hover {
     background-color: rgba(80, 17, 204);
 }
+
 .quality__img--wrapper {
     border-radius: 4px;
     border: 1px solid rgb(229, 231, 235);
@@ -513,12 +528,305 @@ img {
     display: flex;
 }
 
-.quality__description, .quality__img--wrapper {
+.quality__description,
+.quality__img--wrapper {
     width: 50%;
 }
+
+.quality__img {
+    z-index: 1;
+}
+
 img {
     width: 100%;
 }
+
+.quality__grid {
+    transform: translateX(50%) translateY(50%) scaleX(1) scaleY(1);
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 0px;
+    bottom: 0px;
+    fill: rgb(100, 21, 255);
+    --tw-text-opacity: 1;
+    color: rgba(100, 21, 255, var(--tw-text-opacity));
+    z-index: 0;
+    display: block;
+}
+
+/* Steps to get started */
+
+.section {
+    padding: 0 32px;
+}
+
+.container {
+    padding: 96px 0;
+}
+
+#steps .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.quality__description,
+.quality__img--wrapper,
+.steps__description,
+.steps__img--wrapper,
+.values__description,
+.values__img,
+.testimonials__description,
+.testimonials__img {
+    width: 100%;
+
+}
+
+.steps__img--wrapper {
+    display: flex;
+    position: relative;
+}
+
+.img {
+    width: 100%;
+}
+
+.steps__grid {
+    height: 5rem;
+    width: 5rem;
+    bottom: -50px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    opacity: 0.8;
+    z-index: -10;
+    color: rgb(100, 21, 255);
+    fill: currentColor
+}
+
+.steps__description {
+    padding: 0;
+    margin-top: 64px;
+    text-align: center;
+}
+
+.section__tag {
+    font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.section__title {
+    margin: 16px 0 0;
+    font-size: 30px;
+    line-height: 1.25;
+    font-weight: 900;
+    color: rgb(36, 62, 99);
+    letter-spacing: 0.025em;
+
+}
+
+.steps__list {
+    margin-top: 48px;
+}
+
+.step {
+    flex-direction: column;
+    align-items: center;
+    display: flex;
+    margin-top: 32px;
+}
+
+.step__number {
+    color: #cbd5e0;
+    font-size: 36px;
+    font-weight: 600;
+    line-height: 1;
+}
+
+.step__description {
+    margin-top: 12px;
+    margin-left: 0;
+    display: flex;
+    flex-direction: column;
+    max-width: 320px;
+}
+
+.step__title {
+    font-weight: 600;
+    font-size: 20px;
+    color: #243e63;
+    line-height: 1;
+}
+
+.step__para {
+    font-size: 14px;
+    color: #718096;
+    margin-top: 12px;
+    font-weight: 500;
+    line-height: 2;
+}
+
+/* vALUES SECTION */
+
+.section {
+    padding: 0 32px
+}
+
+.container {
+    padding: 96px 0;
+}
+
+#quality .row #values .row {
+    flex-direction: column-reverse
+}
+
+#values .row {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.values__description {
+    width: 50%;
+    max-width: 448px;
+    padding: 32px 64px 32px;
+    margin-top: 64px;
+    text-align: center;
+}
+
+.section__tag {
+    font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+#values .section__title {
+    margin-top: 16px;
+    margin-bottom: 32px;
+    line-height: 1.25;
+}
+
+.section__title {
+    font-size: 48px;
+    font-weight: 900;
+    color: rgb(36, 62, 99);
+    margin: 16px 0;
+    letter-spacing: 0.025em;
+
+}
+
+.value__name {
+    margin-left: 12px;
+    font-size: 20px;
+    font-weight: bold;
+    color: #243e63;
+}
+
+.section__para {
+    font-size: 14px;
+    font-weight: 500;
+    color: #7c8ba1;
+    line-height: 1.625;
+}
+
+.values__list {
+    margin-left: 0px;
+    margin-right: 0px;
+    display: flex;
+    max-width: none;
+    flex-direction: row;
+}
+
+.values__list {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 20rem;
+    margin-top: 36px;
+    margin-bottom: 16px;
+    gap: 24px;
+}
+
+.value:nth-child(1) .value__img--wrapper {
+    background-color: #9ae6b4;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 36px;
+    height: 36px;
+}
+
+.value:nth-child(2) .value__img--wrapper {
+    background-color: #feb2b2;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 36px;
+    height: 36px;
+}
+
+
+.value__img {
+    width: 20px;
+    height: 20px;
+}
+
+#values .button {
+    margin-top: 48px;
+}
+
+.btn {
+    line-height: 1.5;
+    background-color: #6415ff;
+    padding: 12px 32px;
+    border: none;
+    border-radius: 500px;
+    font-size: 14px;
+    color: #fff;
+    font-weight: bold;
+    transition: all 300ms ease;
+    cursor: pointer;
+}
+
+.values__img {
+    width: 100%;
+    max-width: 448px;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
