--- a/style.css
+++ b/style.css
@@ -855,9 +855,9 @@ img {
 
 .pricing__tag {
     font-size: 16px;
-    font-weight: 700px;
     text-transform: uppercase;
     color: #6415ff;
+    font-weight: 700;
     letter-spacing: 1.6px;
 
 }
@@ -959,7 +959,7 @@ img {
     line-height: 1.5;
     letter-spacing: 0.025em;
 }
-}
+
 
 .plan__feature {
     margin-top: 20px;
@@ -1169,7 +1169,7 @@ button {
     padding-left: 2rem;
     padding-right: 2rem;
 }
-}
+
 
 .plan__bottom {
     padding-left: 4rem;
@@ -1191,6 +1191,348 @@ button {
 
 /*testimonials section*/
 
+.section{
+    padding: 0 32px;
+}
+
+
+.container {
+    padding: 96px 0;
+}
+#testimonials .row{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.row{
+    width: 100%;
+    margin: 0 auto;
+}
+.testimonials__img{
+    width: 40%;
+}
+.testimonials__description{
+    width: calc(100% - 40%);
+}
+.testimonials__description{
+    display: flex;
+    flex-direction: column;
+    padding-left: 64px;
+}
+.sect__tag{
+    font-size: 16px;
+    color: #6415ff;
+    letter-spacing: 1.6px;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+#testimonials .sect__title{
+    margin-top: 24px;
+    line-height: 1.25;
+}
+.sect__title{
+    font-size: 48px;
+    font-weight: 900;
+    color: rgb(36, 62, 99);
+    margin: 16px 0;
+    letter-spacing: 0.025em;
+}
+.sect__para{
+    font-size: 18px;
+    font-weight: 500;
+    color: #7c8ba1;
+    line-height: 1.625;
+}
+.testimonial{
+    margin-top: 40px;
+}
+.testimonial__rating{
+     color: rgba(246, 173, 85);
+     margin-right: 2px;
+     margin-top: 4px;
+}
+.fa-star{
+    font-weight: 900;
+}
+.test__title{
+    color: #4a5568;
+    line-height: 1.625;
+    margin-top: 2rem;
+    font-size: 1.25rem;
+    font-weight: 600;
+}
+.test__para{
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    font-weight: 500;
+    line-height: 1.625;
+    font-size: 16px;
+    color: rgb(74 85 104);
+}
+.testimonial__bottom{
+    display: flex;
+    justify-content: space-between;
+}
+.testimonial__profile{
+    display: flex;
+    align-items: center;
+}
+.testimonial__img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+}
+.testimonial__details{
+    margin-left: 24px;
+}
+.testimonial__name{
+    color: #4a5568;
+    line-height: 1.625;
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+.testimonial__role{
+    color: #7c8ba1;
+    font-weight: 500;
+    line-height: 1.5;
+}
+.testimonial__buttons{
+    display: flex;
+    align-items: center;
+}
+.testimonial__button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 16px;
+    background: #edf2f7;
+    border-radius: 50%;
+    margin: 0 12px;
+    transition: all 300ms ease;
+}
+button{
+    cursor: pointer;
+    border: none;
+}
+.testimonial__button svg{
+    width: 16px;
+    height: 16px;
+}
+.divider {
+    margin-top: 0.75rem;
+    margin-bottom: 0.75rem;
+    border-right-width: 1px;
+    width: 0.5px;
+    background-color: #edf2f7;
+    height: 20px;
+}
+/* get started section*/    
+
+section{
+    padding: 0 32px;
+}
+.container{
+    padding: 96px 0;
+} 
+#start .row{
+    position: relative;
+    overflow: hidden;
+}
+.row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.start__blob--1{
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 20rem;
+    width: 20rem;
+    transform: translate(-5rem, 8rem);
+    color: rgb(80 17 204);
+    opacity: 0.5;
+}
+.start__blob--2{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 20rem;
+    width: 20rem;
+    transform: translate(5rem, -16rem);
+    color: rgb(80 17 204);
+    opacity: 0.5;
+}
+.start__container{
+    padding: 96px, 0;
+    width: 100%;
+    background-color: rgb(100 21 255);
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+.start__row{
+    width: 100%;
+    margin: 0 auto;  
+    max-width: 1200px;
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+.start__title{
+    color: #f7fafc;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 1.5;
+    z-index: 2;
+}
+.start__title,
+.start__buttons{
+    width: 50%;
+}
+.start__buttons{
+    display: flex;
+    justify-content:flex-end;
+}
+
+.start__button:nth-child(1) {
+    background: #f56565;
+    box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+    margin-right: 32px;
+    transition: all 300ms ease;
+}
+
+.start__button {
+    padding: 20px 40px;
+    border-radius: 500px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #f7fafc;
+    line-height: 1.5;
+    margin: 1px;
+    z-index: 2;
+}
+.btn{
+    background-color: #6415ff;
+    border: none;
+}
+.start__button:nth-child(2) {
+    border: 1px solid rgb(160, 174, 192);
+    transition: all 300ms ease;
+}
+.start__button {
+    padding: 20px 40px;
+    border-radius: 500px;
+    font-weight: 700;
+    font-size: 16px;
+    color: #f7fafc;
+    line-height: 1.5;
+    letter-spacing: 0.025;
+    margin: 1px;
+    z-index: 2;
+}
+
+.main{margin-bottom: 96px;
+}
+
+/* Footer Section */
+
+footer{
+    padding:96px 32px;
+    background-color: rgb(100 21 255);
+    margin-bottom: -32px;
+    position: relative;
+    overflow: hidden;
+}
+
+.footer__blob--1{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height:320px;
+    width: 320px;
+    transform: translateX(-80px);
+    transform: translateY(-128px);
+    z-index: 1;
+    opacity: 0.5;
+}
+.footer__blob--2{
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    width: 320px;
+    height: 320px;
+    transform: translateX(128px);
+    transform: translateY(192px);
+    z-index: 1;
+    opacity: 0.5;
+}
+.row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+.footer__columns{
+    margin-top: -48px;
+    display: flex;
+    justify-content: space-between; 
+    flex-wrap: wrap;
+}
+.footer__divider{
+    width: 100%;
+    height: 2px;
+    margin: 64px 0;
+    background-color: rgba(116 44 255);
+}
+.footer__bottom{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__logo{
+    display: flex;
+    align-items: center;
+}
+.footer__logo--img{
+    height: 32px;
+    width: 32px;
+}
+.footer__logo--text{
+    font-size: 20px;
+    color: #f7fafc;
+    font-weight: 900;
+    margin-left: 8px;
+    letter-spacing: 0.5em;
+}
+.footer__copyright{
+    color: #cbd5e0;
+    font-weight: 500;
+}
+.footer__socials{
+    display: flex;
+    align-items: center;
+    margin-left: -16px;
+}
+.footer__social--link{
+    margin-left: 16px;
+    padding: 8px;
+    background: #f7fafc;
+    display: flex;
+    justify-content: center;
+    border-radius: 50%;
+    z-index: 2;
+    cursor: pointer;
+    transition: all 300ms ease;
+}
+.footer__social--link svg{
+    width:16px;
+    height:16px;
+}
 
 
 
