--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ section {
 nav {
     padding-top: 32px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 p {
@@ -42,12 +44,15 @@ li {
 .nav__row {
     display: flex;
     justify-content: space-between;
-
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    align-items: center;
 }
 
 .row {
     width: 100%;
-    max-width: 1280px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -186,10 +191,6 @@ button {
     border-radius: 500px;
     border: none;
 }
-.menu--open{
-    max-height: 100vh;
-    overflow-y:hidden;
-}
 
 .menu__link--primary:hover {
     text-decoration: none;
@@ -203,7 +204,11 @@ button {
 
 }
 
-
+.menu--open .menu {
+    visibility: visible;
+    opacity: 1;
+    transform: translateX(0);
+}
 
 .menu {
     position: fixed;
@@ -224,20 +229,17 @@ button {
 }
 
 /*header*/
-header{
-    position: relative;
-}
 
 .container {
     padding: 96px 0;
 }
-@media(max-width:1280px){
+@media(max-width:768px){
     header .row{
-        align-items: flex-end;
+        flex-wrap: wrap;
     }
 }
-
 header .row {
+    align-items: flex-end;
     display: flex;
     justify-content: space-between;
 }
@@ -250,23 +252,24 @@ header .row {
 }
 
 .header__description {
-    width: 40%;
+    width: 468px;
+    display: flex;
+    flex-direction: column;
 }
-@media(max-width:1280px){
+
 h1 {
     font-size: 36px;
     color: #1a202c;
     line-height: 1.25;
 }
-}
+
 .header__description--para {
     font-size: 16px;
 
 }
-@media (max-width:1280px){
+
 .header__description--para {
     margin: 32px 0;
-}
 }
 
 .header__email {
@@ -315,10 +318,10 @@ h1 {
     font-weight: 700;
     letter-spacing: 0.6;
 }
-@media(max-width:1280px){
+
 .header__customers {
     padding-right: 64px;
-}}
+}
 
 .header__customers {
     margin-top: 16px;
@@ -329,16 +332,16 @@ h1 {
 img {
     width: 100%;
 }
-@media(max-width:1280px){
+
 .header__img--wrapper {
     display: flex;
     justify-content: flex-end;
-}}
+}
 
-@media(max-width:1280px){
+
 .header__img--wrapper {
     width: calc(100% - 40%);
-}}
+}
 
 .header__img {
     max-width: 512px;
@@ -353,21 +356,25 @@ img {
     position: relative;
 }
 
-#features .row__narrow {
+section{
+    padding: 0 32px;
+}
+
+
+#features .row{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 
-.row__narrow {
+.row{
     width: 100%;
-    max-width: 1024px;
+    max-width: 1200px;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
 }
+
 
 .section__tag {
     font-size: 16px;
@@ -377,8 +384,13 @@ img {
     text-transform: uppercase;
 }
 
-#features .section__title,
-#pricing .section__title {
+#features .section__title{
+   max-width: 576px;
+
+}
+.section__tag{
+    display: flex;
+    flex-direction: column;
     text-align: center;
 }
 
@@ -390,11 +402,13 @@ img {
     margin: 16px 0;
     letter-spacing: 0.025em;
 }
-
-.section__para {
+.section__title{
     text-align: center;
-    max-width: 576px;
+
 }
+
+
+
 
 .section__para {
     font-size: 18px;
@@ -403,6 +417,7 @@ img {
     line-height: 1.625;
 }
 
+
 .features {
     display: flex;
     flex-wrap: wrap;
@@ -410,6 +425,7 @@ img {
 }
 
 .feature {
+    display: flex;
     width: calc(100% / 3);
 }
 
@@ -457,16 +473,27 @@ img {
 }
 
 
-
 .quality__description,
 .quality__img--wrapper {
     width: 50%;
+
+}
+.row{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
 }
 
+.quality__description, .quality__img--wrapper, .steps__description, .steps__img--wrapper, .values__description, .values__img, .testimonials__description, .testimonials__img
+ {
+    width: 100%;
+}
 .quality__description {
-    max-width: 576px;
+    max-width: 550px;
     margin-right: 64px;
 }
+
+
 
 .section__tag {
     font-size: 16px;
@@ -503,7 +530,6 @@ img {
 .btn {
     background-color: #6415ff;
     padding: 12px 32px;
-    border: none;
     border-radius: 500px;
     font-size: 14px;
     color: #fff;
@@ -514,6 +540,7 @@ img {
 
 .btn:hover {
     background-color: rgba(80, 17, 204);
+    border: none;
 }
 
 .quality__img--wrapper {
@@ -704,7 +731,6 @@ img {
     max-width: 448px;
     margin-top: 64px;
     text-align: center;
-    margin-left: 24px;
 }
 
 .section__tag {
@@ -884,7 +910,6 @@ img {
         flex-wrap: wrap;
     }
 }
-
 .plans {
     display: flex;
     position: relative;
@@ -995,14 +1020,15 @@ img {
     font-size: 16px;
     line-height: 1.5;
 }
-@media(max-width:1280px){
+
 .plan__bottom {
     padding-left: 2rem;
     padding-right: 2rem;
 }
-}
 
 .plan__bottom {
+    padding-left: 4rem;
+    padding-right: 4rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
@@ -1166,15 +1192,16 @@ button {
     border-bottom-width: 2px;
     padding: 2rem;
 }
-@media(max-width:1280px){
+
 .plan__bottom {
     padding-left: 2rem;
     padding-right: 2rem;
 }
-}
 
 
 .plan__bottom {
+    padding-left: 4rem;
+    padding-right: 4rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
 }
@@ -1196,10 +1223,7 @@ button {
     padding: 0 32px;
 }
 
-#testimonials .container{
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-}
+
 .container {
     padding: 96px 0;
 }
@@ -1217,15 +1241,13 @@ button {
     width: 100%;
     margin: 0 auto;
 }
-@media(max-width: 1280px){
+
 .testimonials__img {
     width: 40%;
 }
-}
-@media(max-width: 1280px){
+
 .testimonials__description {
     width: calc(100% - 40%);
-}
 }
 
 .testimonials__description {
@@ -1430,7 +1452,6 @@ section {
     font-weight: 700;
     line-height: 1.5;
     z-index: 2;
-    margin-right: ;
 }
 
 .start__title,
@@ -1531,27 +1552,14 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-
 }
-
-.footer__column--link {
-    color: #f7fafc;
-    font-size: 14px;
-    margin-top: 12px;
-    line-height: 1.5;
-    font-weight: 500;
-    position: relative;
-    cursor: pointer;
-}
-
-
-
 .footer__column {
     margin-top: 48px;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     z-index: 2;
+
 }
 
 .footer__column--title {
@@ -1560,24 +1568,9 @@ footer {
     line-height: 1.5;
 }
 
-.footer__column {
-    margin-top: 48px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    z-index: 2;
-}
-
-.footer__column--title {
-    font-weight: 700;
-    color: #f7fafc;
-    line-height: 1.5;
-}
-
-.footer__column--link:nth-child(2) {
+.footer__link:nth-child(2) {
     margin-top: 24px;
 }
-
 .footer__column--link {
     color: #f7fafc;
     font-size: 14px;
@@ -1586,6 +1579,11 @@ footer {
     font-weight: 500;
     position: relative;
     cursor: pointer;
+}
+
+a {
+    display: inline;
+    text-decoration: none;
 }
 
 .footer__divider {
@@ -1647,36 +1645,28 @@ footer {
     height: 16px;
 }
 
-.footer__row {
-    flex-direction: column;
-}
 
-.footer__column {
-    display: flex;
-    flex-direction: column;
+
+
+
+
+@media(max-width:1024px) {
+    .nav__links {
+        display: none;
+    }
+
+    .btn__menu {
+        display: block;
+    }
 }
 
 
 /*small phones, tablets,large smartphones*/
 @media(max-width:768px) {
-    .plans{
-        width:50%;
-    }
+   
 }
-  
 
 
 /*small phones, large smartphons*/
 @media (max-width:550px) {
-    .nav__links {
-        display: none;
-    }
-
-
-    .btn__menu {
-        display: block;
-    }
-    .footer{
-        margin-bottom: 24px;
-    }
-        }
+}
