--- a/style.css
+++ b/style.css
@@ -233,9 +233,10 @@ button {
 .container {
     padding: 96px 0;
 }
-@media(max-width:768px){
+@media(max-width:1024px){
     header .row{
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
     }
 }
 header .row {
@@ -250,9 +251,23 @@ header .row {
     margin: 0 auto;
     padding: 0px;
 }
-
+@media(max-width:1024px){
+    .header__description{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+@media(max-width:1024px){
+    .header__description{
+       width: 100%;
+       max-width: 512px;
+       margin: 0 auto;
+    }
+}
 .header__description {
-    width: 468px;
+    width: 40%;
     display: flex;
     flex-direction: column;
 }
@@ -281,7 +296,29 @@ h1 {
     justify-content: flex-end;
     align-items: center;
 }
-
+@media(max-width:640px){
+    .header__email{
+        flex-direction: column;
+        height: auto;
+    }
+}
+@media(max-width:640px){
+    .email__input{
+        position: static;
+        padding: 16px 0;
+        padding-left: 32px;
+        line-height: 1.5;
+    }
+}
+@media(max-width:640px){
+    .email__btn{
+        width:100%;
+        padding: 16px 0;
+        margin: 16px 0;
+        margin-bottom: 0px;
+        line-height: 1.5;
+    }
+    }
 .email__input {
     width: 100%;
     border-radius: 500px;
@@ -309,6 +346,12 @@ h1 {
     font-weight: 700;
     font-size: 16px;
     transition: all 300ms ease;
+}
+@media(max-width:640px){
+    .header__customers--title{
+        font-size: 14px;
+        letter-spacing: 0.05em;
+    }
 }
 
 .header__customers--title {
@@ -470,7 +513,8 @@ section{
 }
 @media(max-width:768px){
     #quality .row{
-        flex-wrap: wrap;
+        flex-wrap: wrap-reverse;
+
     }
 }
 #quality .row {
@@ -486,13 +530,22 @@ align-items: center;
     margin: 0 auto;
 }
 
-.quality__description, .quality__img--wrapper, .steps__description, .steps__img--wrapper, .values__description, .values__img, .testimonials__description, .testimonials__img
+.quality__description, .quality__img--wrapper, 
+.steps__description, .steps__img--wrapper,
+ .values__description, .values__img,
+  .testimonials__description, .testimonials__img
  {
     width: 100%;
 }
+@media(max-width:768px){
+    .quality__description{
+     text-align: center;
+     margin:48px 62px;}
+
+    }
 .quality__description {
     max-width: 350px;
-    margin-right: 64px;
+    margin-right: 54px;
 }
 
 
@@ -505,7 +558,7 @@ align-items: center;
     text-transform: uppercase;
 }
 
-#quality.section__titlec #values .section__title {
+#quality.section__title #values .section__title {
     line-height: 1.25;
 }
 
@@ -718,10 +771,14 @@ img {
 }
 
 #quality .row #values .row {
-    flex-direction: column-reverse
+    flex-direction: column-reverse;
 }
 
-
+@media(max-width:768px){
+    #values .row{
+        flex-direction: column-reverse;
+    }
+}
 #values .row {
     display: flex;
     justify-content: space-between;
@@ -733,11 +790,7 @@ img {
     max-width: 1200px;
     margin: 0 auto;
 }
-@media(max-width:768px){
-     .row{
-        flex-wrap: wrap;
-    }
-}
+
 .values__description {
     width: 50%;
     max-width: 448px;
@@ -753,10 +806,15 @@ img {
     text-transform: uppercase;
 }
 
-#values .section__title {
+.section__title {
     margin-top: 16px;
     margin-bottom: 32px;
     line-height: 1.25;
+}
+@media(max-width:640px){
+    .section__title{
+        font-size: 30px;
+    }
 }
 
 .section__title {
@@ -780,7 +838,8 @@ img {
     font-weight: 500;
     color: #7c8ba1;
     line-height: 1.625;
-}@media(max-width: 768px){
+}
+@media(max-width:768px){
     .values__list{
         flex-wrap: wrap;
     }
@@ -792,12 +851,6 @@ img {
     max-width: none;
     flex-direction: row;
 }
-
-.value__title {
-    display: flex;
-    align-items: center;
-}
-
 
 .value:nth-child(1) .value__img--wrapper {
     background-color: #9ae6b4;
@@ -840,14 +893,19 @@ img {
     line-height: 1.625;
     color: #7c8ba1;
 }
-
+@media(max-width:768px){
+    .section__para{
+        font-size: 14px;
+    }
+}
 .value__img {
     width: 20px;
     height: 20px;
 }
 
-#values .button {
+#values .btn{
     margin-top: 48px;
+    
 }
 
 .btn {
@@ -884,11 +942,12 @@ img {
     padding: 96px 0;
 }
 
-.pricing__row {
+#pricing .row {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 
 .row {
     width: 100%;
@@ -906,6 +965,9 @@ img {
 }
 
 
+.pricing__title{
+        text-align: center;
+}
 .pricing__title {
     font-size: 48px;
     font-weight: 900;
@@ -913,26 +975,31 @@ img {
     line-height: 1.5;
     margin: 16px 0;
     letter-spacing: 0.025em;
-
 }
-
+@media(max-width:768px){
+    .pricing__para{
+        font-size: 14px;
+    }
+}
 .pricing__para {
     font-size: 18px;
     font-weight: 500;
     color: #7c8ba1;
     line-height: 1.625;
-    max-width: 576px;
+    max-width: 50%;
     text-align: center;
 }
-@media(max-width:768px){
+@media(max-width:1024px){
     .plans{
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+        margin-left: 24px;
     }
+   
 }
 .plans {
     display: flex;
     position: relative;
-    flex-direction: row;
     width: 100%;
     justify-content: space-between;
 }
@@ -1241,13 +1308,18 @@ button {
 .section {
     padding: 0 32px;
 }
-
+@media(max-width:1024px){
+#testimonials .container{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+}
 
 .container {
     padding: 96px 0;
 }
 
-#testimonials .row {
+.testimonial__row {
     margin-left: auto;
     margin-right: auto;
     max-width: 1200px;
@@ -1256,7 +1328,7 @@ button {
     justify-content: space-between;
 }
 
-.row {
+.testimonial__row {
     width: 100%;
     margin: 0 auto;
 }
@@ -1264,17 +1336,30 @@ button {
 .testimonials__img {
     width: 40%;
 }
+@media(max-width:768px){
+    .testimonials__img{
+        width: 100%;
+        max-width: 448px;
+        padding: 0;
+        margin-bottom: 24px;
+    }
+}
 
 .testimonials__description {
     width: calc(100% - 40%);
 }
+
 
 .testimonials__description {
     display: flex;
     flex-direction: column;
     padding-left: 64px;
 }
-
+@media(max-width:768px){
+    .sect__tag{
+        font-size: 54px;
+    }
+}
 .sect__tag {
     font-size: 16px;
     color: #6415ff;
@@ -1283,11 +1368,21 @@ button {
     text-transform: uppercase;
 }
 
-#testimonials .sect__title {
+#testimonial .sect__title {
     margin-top: 24px;
     line-height: 1.25;
 }
+@media(max-width:1024px){
+    .sect__title{
+        font-size:36px;
+    }
+}
+@media(max-width:640px){
+    .sect__title{
+        font-size: 30px;
+    }
 
+    }
 .sect__title {
     font-size: 48px;
     font-weight: 900;
@@ -1295,7 +1390,11 @@ button {
     margin: 16px 0;
     letter-spacing: 0.025em;
 }
-
+@media(max-width:768px){
+    .sect__para{
+        font-size: 14px;
+    }
+}
 .sect__para {
     font-size: 18px;
     font-weight: 500;
@@ -1317,14 +1416,18 @@ button {
     font-weight: 900;
 }
 
-.test__title {
+.testimonial__title {
     color: #4a5568;
     line-height: 1.625;
-    margin-top: 2rem;
+    margin-top: 1rem;
     font-size: 1.25rem;
     font-weight: 600;
 }
-
+@media(max-width:768px){
+.testimonial__title{
+    font-size: 1rem;
+}
+}
 .test__para {
     margin-top: 1rem;
     margin-bottom: 2rem;
@@ -1332,6 +1435,11 @@ button {
     line-height: 1.625;
     font-size: 16px;
     color: rgb(74 85 104);
+}
+@media(max-width:768px){
+    .test__para{
+        font-size: 14px;
+    }
 }
 
 .testimonial__bottom {
@@ -1682,8 +1790,25 @@ a {
 
 /*small phones, tablets,large smartphones*/
 @media(max-width:768px) {
-   
+    .section__title{
+        font-size: 36px;}
+    .feature__row{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .feature__para{
+        font-size: 14px;
+    }
+   .testimonial__row{
+    flex-direction: column;
+   }
+
+
 }
+   
+
 
 
 /*small phones, large smartphons*/
