--- a/style.css
+++ b/style.css
@@ -233,43 +233,23 @@ button {
 .container {
     padding: 96px 0;
 }
-@media(max-width:1024px){
-    header .row{
-        flex-direction: column;
-        align-items: center;
-    }
-}
-header .row {
-    align-items: flex-end;
+
+
+#header .row {
     display: flex;
+    align-items: flex-end;
     justify-content: space-between;
 }
-
-header .row {
+.row {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0px;
+ 
 }
-@media(max-width:1024px){
-    .header__description{
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-@media(max-width:1024px){
-    .header__description{
-       width: 100%;
-       max-width: 512px;
-       margin: 0 auto;
-    }
-}
+
 .header__description {
     width: 40%;
-    display: flex;
-    flex-direction: column;
+ 
 }
 
 h1 {
@@ -280,11 +260,8 @@ h1 {
 
 .header__description--para {
     font-size: 16px;
-
-}
-
-.header__description--para {
     margin: 32px 0;
+    line-height: 1.5;
 }
 
 .header__email {
@@ -302,23 +279,6 @@ h1 {
         height: auto;
     }
 }
-@media(max-width:640px){
-    .email__input{
-        position: static;
-        padding: 16px 0;
-        padding-left: 32px;
-        line-height: 1.5;
-    }
-}
-@media(max-width:640px){
-    .email__btn{
-        width:100%;
-        padding: 16px 0;
-        margin: 16px 0;
-        margin-bottom: 0px;
-        line-height: 1.5;
-    }
-    }
 .email__input {
     width: 100%;
     border-radius: 500px;
@@ -331,8 +291,20 @@ h1 {
     top: 0;
     bottom: 0;
     z-index: 1;
-    transition: all 300ms auto;
+    transition: border-color 300ms;
 }
+
+ .email__btn{
+        width:100%;
+        padding: 16px 0;
+        margin: 16px 0;
+        margin-bottom: 0px;
+        line-height: 1.5;
+    }
+.header__customers--title{
+        font-size: 14px;
+        letter-spacing: 0.05em;
+    }
 
 .email__btn {
     z-index: 2;
@@ -347,12 +319,7 @@ h1 {
     font-size: 16px;
     transition: all 300ms ease;
 }
-@media(max-width:640px){
-    .header__customers--title{
-        font-size: 14px;
-        letter-spacing: 0.05em;
-    }
-}
+   
 
 .header__customers--title {
     margin-top: 80px;
@@ -379,32 +346,27 @@ img {
 .header__img--wrapper {
     display: flex;
     justify-content: flex-end;
-}
-
-
-.header__img--wrapper {
     width: calc(100% - 40%);
 }
 
 .header__img {
+    width:100%;
     max-width: 512px;
 }
 
-.header__img {
-    width: 100%;
-}
+/*features*/
 
-/* features */
-#features {
+.features__section {
     position: relative;
-}
-
-section{
     padding: 0 32px;
 }
 
+#features .container{
+    padding:96px 0;
+}
 
-#features .row{
+
+.row{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -517,12 +479,11 @@ section{
 
     }
 }
-#quality .row {
-display: flex;
-justify-content: space-between;
-align-items: center;
+#quality .row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
-
 
 .row{
     width: 100%;
@@ -535,7 +496,7 @@ align-items: center;
  .values__description, .values__img,
   .testimonials__description, .testimonials__img
  {
-    width: 100%;
+    width: 50%;
 }
 @media(max-width:768px){
     .quality__description{
@@ -609,7 +570,7 @@ align-items: center;
 
 .quality__description,
 .quality__img--wrapper {
-    width: 100%;
+    width: 50%;
 }
 
 .quality__img {
@@ -811,11 +772,7 @@ img {
     margin-bottom: 32px;
     line-height: 1.25;
 }
-@media(max-width:640px){
-    .section__title{
-        font-size: 30px;
-    }
-}
+
 
 .section__title {
     font-size: 48px;
@@ -989,14 +946,7 @@ img {
     max-width: 50%;
     text-align: center;
 }
-@media(max-width:1024px){
-    .plans{
-        flex-direction: column;
-        align-items: center;
-        margin-left: 24px;
-    }
-   
-}
+
 .plans {
     display: flex;
     position: relative;
@@ -1308,12 +1258,6 @@ button {
 .section {
     padding: 0 32px;
 }
-@media(max-width:1024px){
-#testimonials .container{
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-}
-}
 
 .container {
     padding: 96px 0;
@@ -1372,17 +1316,7 @@ button {
     margin-top: 24px;
     line-height: 1.25;
 }
-@media(max-width:1024px){
-    .sect__title{
-        font-size:36px;
-    }
-}
-@media(max-width:640px){
-    .sect__title{
-        font-size: 30px;
-    }
-
-    }
+  
 .sect__title {
     font-size: 48px;
     font-weight: 900;
@@ -1474,7 +1408,12 @@ button {
     font-weight: 500;
     line-height: 1.5;
 }
+@media(max-width:768px){
+    .testimonial__buttons{
+        flex-direction: column;
 
+    }
+}
 .testimonial__buttons {
     display: flex;
     align-items: center;
@@ -1781,30 +1720,77 @@ a {
     .nav__links {
         display: none;
     }
+    .header__customers--title {
+    margin-top: 48px;}
 
     .btn__menu {
         display: block;
     }
+     .header__description{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width:100%;
+        max-width: 512px;
+        margin: 0 auto;
+    }
+    .header__img--wrapper{
+        margin-top: 48px;
+        width:100%;
+        max-width:512px;
+        margin: 0 auto;
+    }
+   
+
+    .h1{
+            font-size:30px;
+        }
+    header .row{
+        flex-direction: column;
+        align-items: center;
+        display: flex;
+    } 
+    .sect__title{
+        font-size:36px;
+    } 
+    .quality__description{
+        margin-right: 0px;
+        padding-right: 48px;
+    }
+    .quality__para{
+         font-size: 16px;
+    }
+    .plans{
+        flex-direction: column;
+        align-items: center;
+        margin-left: 24px;
+    }
+    #testimonials .container{
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
+.header__description--para{
+    margin: 20px 0;
+}
+   
+}
+
 
 
 /*small phones, tablets,large smartphones*/
 @media(max-width:768px) {
-    .section__title{
-        font-size: 36px;}
-    .feature__row{
-        width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .feature__para{
-        font-size: 14px;
-    }
-   .testimonial__row{
-    flex-direction: column;
-   }
+ 
 
+}
+@media(max-width:640px){
+    .section__title{
+        font-size: 30px;
+    }
+    .header__email{
+        flex-direction: column;
+        height: auto;
+    }
 
 }
    
@@ -1812,5 +1798,12 @@ a {
 
 
 /*small phones, large smartphons*/
+
 @media (max-width:550px) {
+
+}
+
+
+
+    @media (max-width:350px) {
 }
